# pico_sharpmem_display

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh
examples/: CMakeLists.txt
examples/highlevel/: CMakeLists.txt
examples/highlevel/console_advanced_setup/: CMakeLists.txt  main.c
examples/highlevel/console_count/: CMakeLists.txt  main.c
examples/lowlevel/: CMakeLists.txt
examples/lowlevel/buffer_direct/: CMakeLists.txt  main.c
examples/midlevel/: CMakeLists.txt
examples/midlevel/bitmapblit/: CMakeLists.txt  Makefile  main.c  rose.c  rose.h  rose.yaml
examples/midlevel/bitmapimage/: CMakeLists.txt  Makefile  images.c  images.h  images.yaml  main.c
examples/midlevel/bitmapshapes/: CMakeLists.txt  main.c
examples/midlevel/doublebuffer/: CMakeLists.txt  ball.c  ball.h  collision_detect.c  collision_detect.h  common.h  main.c
examples/midlevel/hello_world/: CMakeLists.txt  main.c
examples/midlevel/mapscroll/: CMakeLists.txt  Makefile  main.c  map.c  map.h  map.yaml
examples/midlevel/metrics/: CMakeLists.txt  main.c
examples/midlevel/scroll_text/: CMakeLists.txt  main.c
fonts/: CMakeLists.txt  Makefile  liberation_mono_10.c  liberation_mono_10.h  liberation_mono_10.yaml  liberation_mono_12.c  liberation_mono_12.h  liberation_mono_12.yaml  liberation_mono_14.c  liberation_mono_14.h  liberation_mono_14.yaml  liberation_mono_24.c  liberation_mono_24.h  liberation_mono_24.yaml  liberation_mono_32.c  liberation_mono_32.h  liberation_mono_32.yaml  liberation_mono_9.c  liberation_mono_9.h  liberation_mono_9.yaml  liberation_sans_12.c  liberation_sans_12.h  liberation_sans_12.yaml  liberation_sans_18.c  liberation_sans_18.h  liberation_sans_18.yaml  liberation_sans_24.c  liberation_sans_24.h  liberation_sans_24.yaml  liberation_sans_36.c  liberation_sans_36.h  liberation_sans_36.yaml  liberation_sans_48.c  liberation_sans_48.h  liberation_sans_48.yaml  liberation_sans_60.c  liberation_sans_60.h  liberation_sans_60.yaml  liberation_sans_80.c  liberation_sans_80.h  (+2 more)
include/sharpdisp/: bitmap.h  bitmapconsole.h  bitmapimage.h  bitmapshapes.h  bitmaptext.h  console.h  doublebuffer.h  metrics.h  sharpconsole.h  sharpdisp.h
src/: CMakeLists.txt  bitmap.c  bitmapconsole.c  bitmapimage.c  bitmapshapes.c  bitmaptext.c  console.c  doublebuffer.c  metrics.c  rle.c  rle.h  sharpconsole.c  sharpdisp.c
test/: CMakeLists.txt  Makefile  bitmaptests.c  common.c  common.h  consoletests.c  constants.h  gen_testnames.py  images.c  images.h  images.yaml  imagetests.c  main.c  shapetests.c  tests.inc  texttests.c
tools/: make_images.py  make_var_font.py
tools/lib/: codegen.py  rle.py
